--- a/assignment3/assignment3.css
+++ b/assignment3/assignment3.css
@@ -1,5 +1,4 @@
 .tabList {
-	font-family: "Trebuchet MS",serif;
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
@@ -35,7 +34,7 @@ li.selectedTab button {
 	border: none;
 	z-index:1;
 }
-.tabBtn:focus, .tabBtn:focus-within, .tabBtn:active, .tabBtn:hover, .tabBtn:focus-visible, .tabBtn:target {
+.tabBtn:focus {
 	outline: none;
 	border-top: 2px solid blue;
 }
