--- a/assignment3/assignment3.css
+++ b/assignment3/assignment3.css
@@ -1,68 +1,83 @@
 .tabList {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	display: table;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
 }
-.tabList li {
-	margin: 0;
-	padding: 0px; 
-	display: table-cell;
-	position: relative;
-	top: 0px;
-	z-index:1;
-	border: 1px solid black;
-	border-bottom: red;
-	color: #0000FF;
-	overflow-y: visible;
 
+.tabList li {
+    margin: 0;
+    padding: 0;
+    display: table-cell;
+    position: relative;
+    top: 0px;
+    z-index: 1;
+    border: 1px solid black;
+    border-bottom: red;
+    color: #0000FF;
+    overflow-y: visible;
 }
+
 li.selectedTab {
-	background-color: #FFFFFF;
-	color: black;
-	z-index:3;
+    background-color: #FFFFFF;
+    color: black;
+    z-index: 3;
 }
-li.selectedTab button {
-	position: relative;
-	background-color: white;
+
+.tabList button {
+    margin: 0;
+    padding: 10px;
+    border: 1px solid black;
+    background-color: #fff;
+    color: #0000FF;
+    cursor: pointer;
+    outline: none;
 }
+
+.tabList button:focus {
+    border: 2px solid blue;
+}
+
 .tabBtn {
-	position: relative;
-	text-decoration:none;
-	color: black;
-	background-color: white;
-	border: none;
-	z-index:1;
+    position: relative;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border: none;
+    z-index: 1;
 }
 .tabBtn:focus {
-	outline: none;
-	border-top: 2px solid blue;
+    outline: none;
+    border-top: 2px solid blue;
 }
 
 .panels {
-	border: thin solid black;
-	background-color: white;
-	position: relative;
-	z-index: 2;
-	margin-top: -1px;
+    border: thin solid black;
+    background-color: white;
+    position: relative;
+    z-index: 2;
+    margin-top: -1px;
 }
+
 .panels div {
-	padding: 1.13em;
+    padding: 1.13em;
 }
 
 .show {
-	display: block;
-}
-.hidden {
-	display: none;
+    display: block;
 }
 
-div[role="main"], main {
-	border-top: solid thin black;
+.hidden {
+    display: none;
+}
+
+div[role="main"],
+main {
+    border-top: solid thin black;
 }
 
 footer {
-	font-size: 85%;
-	padding: 1em;
-	border-top: solid thin black;
+    font-size: 85%;
+    padding: 1em;
+    border-top: solid thin black;
 }
