--- a/assignment2/assignment2.css
+++ b/assignment2/assignment2.css
@@ -30,3 +30,10 @@ footer {
 	padding: 1em;
 	border-top: solid thin black;
 }
+
+
+    #messageCentre {
+        color: red;
+        font-size: 18px;
+    }
+
